tests/neg/simple/overload-00.ts

/*@ foo :: (x: number + string) => { boolean | true } */
function foo(x: any): boolean  {

  return 1 < x;

}
